# ray-marching-2d-2

./: .env.cmake  .gitignore  CMakeLists.txt  README.md  compile_commands.json  debug.bat  imgui.ini  release.bat
res/shaders/: gi.frag  jfa.frag  mouse.frag  sdf.frag  seed.frag
src/: ProfilerManager.hpp  RenderConfig.cpp  RenderConfig.hpp  gui.cpp  gui.hpp  imgui.ini  main.cpp  mouse.frag  pch.hpp  rm.frag
src/cl/: Sand.cpp  Sand.hpp  sand.cl
src/shaders/: gi.frag  jfa.frag  mouse.frag  sdf.frag  seed.frag
